--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Kinjal-1426/J_Quick_Calc",
+  "homepage": "https://kinjal-1426.github.io/J_Quick_Calc",
   "name": "quick-calc",
   "private": true,
   "version": "0.0.0",
